  the configured target type is a wrapper for the target primitive type, including
  primitive widening support -- for example, from `Integer` to `int` or `long`.
* Exceptions thrown from instances of `CloseableResource` no longer hide test failures but
  are instead reported as suppressed exceptions.

==== Deprecations and Breaking Changes

* `InvocationInterceptor.interceptDynamicTest(Invocation<Void>, ExtensionContext)` has
  been deprecated in favor of
  `InvocationInterceptor.interceptDynamicTest(Invocation<Void>, DynamicTestInvocationContext, ExtensionContext)`
  that provides access to the dynamic test executable via
  `DynamicTestInvocationContext.getExecutable()`.

==== New Features and Improvements

* Test classes can now be ordered _globally_ by supplying the fully-qualified name of a
  class implementing the `ClassOrderer` API as the value of the new
  `junit.jupiter.testclass.order.default` configuration parameter.
* `@Nested` test classes can be ordered _locally_ via the new `@TestClassOrder` annotation
  in which a `ClassOrderer` can be specified.
* `@ExtendWith` may now be used to register extensions declaratively via fields or
  parameters in test class constructors, test methods, and lifecycle methods. See
  <<../user-guide/index.adoc#extensions-registration-declarative, Declarative Extension
  Registration>> for details.
* `@RegisterExtension` fields may now be `private`.
* New `assertThrowsExactly()` method in `Assertions` which is a more strict version of
  `assertThrows()` that allows you to assert that the exception thrown is of the exact
  type specified.
* `assertDoesNotThrow()` in `Assertions` now supports suspending functions when called
  from Kotlin.
* New `assertInstanceOf()` methods which produce better error messages comparable to those
  produced by `assertThrows`. These new methods serve as a replacement for
  `assertTrue(obj instanceof X)`.
* `assertNull()` failure messages now include the actual object's type if the `toString()`